--- a/Magma CFB/MagmaCFB.csproj
+++ b/Magma CFB/MagmaCFB.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="System.Text.Encoding.CodePages" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Algorithm\" />
+  </ItemGroup>
+
 </Project>
